/**
 * Klasse zum starten des Worttrainers
 * @author Nathaniel Ribinin
 * @version 2024-10-16
 */
public class Main {
    public static void main(String[] args) {
        GUI gui = new GUI();
        gui.start();
    }
}